[package]
name = "radarpub"
description = "Raivin Radar Publisher"
repository = "https://bitbucket.org/au-zone/radarpub"
license = "CLOSED"
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[[bin]]
name = "radarpub"
path = "src/radarpub.rs"
required-features = ["can", "zenoh"]

[[bin]]
name = "drvegrdctl"
path = "src/drvegrdctl.rs"
required-features = ["can"]

[[bin]]
name = "drvegrd-rerun"
path = "src/rerun.rs"
required-features = ["rerun"]

[features]
default = ["tracy", "can", "zenoh"]
can = ["dep:socketcan"]
rerun = ["dep:rerun", "dep:etherparse", "dep:pcarp", "dep:ndarray-npy"]
zenoh = ["dep:zenoh"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
cdr = "0.2.4"
clap = { version = "4.5.37", features = ["derive", "env"] }
crc16 = "0.4.0"
dbscan = "0.3.1"
edgefirst-schemas = "1.2.7"
env_logger = "0.11.7"
etherparse = { version = "0.18.0", optional = true }
kanal = { git = "https://github.com/fereidani/kanal", rev = "b6aeab2" }
lapjv = "0.2.1"
libc = "0.2.172"
log = "0.4.27"
nalgebra = "0.33.2"
ndarray = "0.16.1"
ndarray-npy = { version = "0.9.1", optional = true }
num = "0.4.1"
pcarp = { version = "2.0.0", optional = true }
rerun = { version = "0.23.1", optional = true }
serde_json = "1.0.140"
socketcan = { version = "3.5.0", features = ["tokio"], optional = true }
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.0", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
uuid = { version = "1.16.0", features = ["v4"] }
zenoh = { version = "1.3.4", optional = true }
