[package]
name = "radarpub"
description = "EdgeFirst Radar Node - Smart Micro DRVEGRD radar publisher for ROS2/Zenoh"
repository = "https://github.com/EdgeFirstAI/radarpub"
license = "Apache-2.0"
version = "1.6.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[[bin]]
name = "radarpub"
path = "src/radarpub.rs"
required-features = ["can", "zenoh"]

[[bin]]
name = "drvegrdctl"
path = "src/drvegrdctl.rs"
required-features = ["can"]

# Examples
[[example]]
name = "radar_viewer"
required-features = ["rerun"]

[[example]]
name = "zenoh_viewer"
required-features = ["rerun", "zenoh"]

[lib]
name = "radarpub"
path = "src/lib.rs"

[features]
default = ["tracy", "can", "zenoh"]
can = ["dep:socketcan"]
rerun = ["dep:rerun", "dep:etherparse", "dep:pcarp", "dep:ndarray-npy"]
zenoh = ["dep:zenoh"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
cdr = "0.2.4"
clap = { version = "4.5.52", features = ["derive", "env"] }
crc16 = "0.4.0"
dbscan = "0.3.1"
edgefirst-schemas = "1.4.0"
env_logger = "0.11.7"
etherparse = { version = "0.18.0", optional = true }
kanal = { git = "https://github.com/fereidani/kanal", rev = "b6aeab2" }
lapjv = "0.2.1"
libc = "0.2.172"
log = "0.4.27"
nalgebra = "0.33.2"
ndarray = "0.16.1"
ndarray-npy = { version = "0.9.1", optional = true }
num = "0.4.1"
pcarp = { version = "2.0.0", optional = true }
rerun = { version = "0.27.2", optional = true, features = ["clap"] }
serde_json = "1.0.145"
socketcan = { version = "3.5.0", features = ["tokio"], optional = true }
tokio = { version = "1.45.0", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.3", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
uuid = { version = "1.18.1", features = ["v4"] }
zenoh = { version = "1.6.2", optional = true }

[dev-dependencies]
etherparse = { version = "0.18.0" }
pcarp = { version = "2.0.0" }
